# ICP-HACKATHON

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE.txt  NOTICE.txt  README.md  canister_ids.json  canister_ids_prod.json  dfx.json  docker-compose-dev.yml  docker-compose-production.yml  docker-compose.yml  docker.compose.yml  dump.rdb  index.html  listOfImages.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
backend/: .gitignore  README.md  docker-compose-dev.yml  docker-compose-production.yml  dump.rdb  listOfImages.json  package-lock.json  package.json
backend/src/: app.ts  router.ts  server.ts
frontend/: .gitignore  Dockerfile  README.md  Visual Studio Code  dump.rdb  index.html  package-lock.json  package.json  tailwind.config.js  ton-connect.manifest.json  vite.config.ts
frontend/src/: App.jsx  Home.jsx  index.css  main.jsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
nft/nft_frontend/: package-lock.json  package.json
public/favicon/: site.webmanifest
scripts/: generate_declarations.sh  icp-ledgers.sh  icp-token.sh  setup.sh
src/: App.jsx  Home.jsx  app.ts  index.css  main.jsx  router.ts  server.ts
src-tauri/icons/: icon.icns
src/Verify/: style.scss
src/assets/: assets.json  characters.json  quests.json
src/components/: Avatar.jsx  ConvertInfo.jsx  Diamond.jsx  Footer.jsx  LeaderboardItem.jsx  LoadCarousel.jsx  Loader.jsx  MilestoneCard.jsx  OrbCard.jsx  Pieces.jsx  (+3 more)
src/game_agent/: Cargo.toml  algorthm.md  example.md  game_agent.did
src/game_agent/src/: lib.rs
(+1245 files in other folders)
