[package]
name = "game_agent"
version = "0.1.0"
edition = "2021"

[lib]
name = "game_agent"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-macros = "0.13"
ic-stable-structures = "0.6"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1